--- a/src/css/components/components.css
+++ b/src/css/components/components.css
@@ -140,6 +140,13 @@ a{
   }
   
   .text-description{
+    max-width: 86%;
+    font-size: 0.7rem;
+    font-weight: 400;
+    line-height: 1.3;
+  }
+  
+  .text-description-pc{
     display: none;
   }
   
