--- a/src/css/components/components.css
+++ b/src/css/components/components.css
@@ -60,6 +60,13 @@ a{
   color: #FF0050;
 }
 
+.text-description-pc{
+  max-width: 60%;
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 1.3;
+}
+
 .text-description{
   max-width: 60%;
   font-size: 1.2rem;
